"common_live" = "Live";
"common_shows" = "Shows";
"common_episodes" = "Episodes";
"common_season" = "Season";
"common_seasons" = "Seasons";
"common_details" = "Details";
"common_settings" = "Settings";
"common_none" = "None";
"common_back" = "Back";
"common_videos" = "Videos";

"shows_description" = "Show description";

"episodes_releaseDate" = "Release date";
"episodes_clearProgress" = "Clear episode progress";
"episodes_options" = "Episode options";

"search_noShowsWithCurrentFilter" = "No shows with the current filter";
"search_noEpisodesWithCurrentFilter" = "No episodes with the current filter";
"search_inputField" = "Enter something in the search field to begin searching";

"settings_logOut" = "Log out";
"settings_logOutConfirm" = "Are you sure you want to log out?";
"settings_signIn" = "Sign in";
"settings_account" = "Account";
"settings_appLanguage" = "App Language";
"settings_audioLanguage" = "Audio Language";
"settings_subtitles" = "Subtitles";
"settings_information" = "Information";
"settings_aboutUs" = "About us";

"signIn_scanWithPhone" = "Scan this with your phone";
"signIn_orGoToAndEnterCode" = "Or go to: $url and enter this code: $code";

"tab_home" = "Home";
"tab_live" = "Live";
"tab_search" = "Search";
"tab_settings" = "Settings";

"live_play" = "Play";

"calendar_today" = "Today";
"calendar_noScheduledEvents" = "No scheduled events";
"calendar_timetableInLocalTime" = "Timetable is in your local time";

"aboutUs_description" = "BCC Media is a foundation in the BCC Federation which produces and distribute content with positive and christian values";
"aboutUs_contact" = "Contact us on $email or in the BCC Media mobile app";
"aboutUs_privacyPolicy" = "The Privacy Policy can be read on $url";

"onboard_title" = "The most powerful message in the world";
"onboard_description" = "Watch series, shows and films based on Christian values";
"onboard_login" = "Log in";
"onboard_explorePublic" = "Explore public content";
