...
                Text("signIn_scanWithPhone").foregroundColor(.gray)
            }
            Spacer().frame(width: 50)
            VStack {
                gotoText
                Spacer().frame(height: 30)
                Text(code).accessibilityIdentifier("LoginCode").accessibilityLabel(code).font(.barlowTitle)
                Spacer().frame(height: 100)
                Button("Cancel") {
                    dismiss()
                }
            }
        }.frame(width: 1200, height: 800).onDisappear {
...
